llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_and_access_with_generics_1_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define void @_TM0_F1f0() gc "shadow-stack" {
entry:
  %"s#local#sym23#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym23#", align 8
  call void @llvm.gcroot(ptr nonnull %"s#local#sym23#", ptr null)
  %"heap#struct#Struct#id1#" = call ptr @gc_malloc(i64 8, i64 8, ptr null)
  store i64 1, ptr %"heap#struct#Struct#id1#", align 4
  store ptr %"heap#struct#Struct#id1#", ptr %"s#local#sym23#", align 8
  call void @gc_run()
  call void @gc_run()
  ret void
}

attributes #0 = { nounwind }
