llvm/src/snapshots/transmute_llvm__tests__struct_lit_as_parameter_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@layout_s6Struct = global [2 x i64] zeroinitializer

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1s6Struct(ptr %"s#param#sym23#") gc "shadow-stack" {
entry:
  %"s#param#sym23#.field#idx0#sym22#1" = load i64, ptr %"s#param#sym23#", align 4
  ret i64 %"s#param#sym23#.field#idx0#sym22#1"
}

define i64 @_TM0_1g0() gc "shadow-stack" {
entry:
  %"gcroot#heap#struct#Struct#id0#" = alloca ptr, align 8
  store ptr null, ptr %"gcroot#heap#struct#Struct#id0#", align 8
  call void @llvm.gcroot(ptr nonnull %"gcroot#heap#struct#Struct#id0#", ptr nonnull @layout_s6Struct)
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 8)
  store ptr %"heap#struct#Struct#id0#", ptr %"gcroot#heap#struct#Struct#id0#", align 8
  store i64 1, ptr %"heap#struct#Struct#id0#", align 4
  %"f#res#" = call i64 @_TM0_1f1s6Struct(ptr nonnull %"heap#struct#Struct#id0#")
  ret i64 %"f#res#"
}

attributes #0 = { nounwind }
