llvm/src/snapshots/transmute_llvm__tests__struct_read_field_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@layout_s6Struct = global [1 x i64] zeroinitializer

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0() gc "shadow-stack" {
entry:
  %"s#local#sym22#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym22#", align 8
  call void @llvm.gcroot(ptr nonnull %"s#local#sym22#", ptr nonnull @layout_s6Struct)
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 8)
  store i64 1, ptr %"heap#struct#Struct#id0#", align 4
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym22#", align 8
  call void @gc_run()
  %"s#local#sym22#1" = load ptr, ptr %"s#local#sym22#", align 8
  %"s#local#sym22#1.field#idx0#sym21#2" = load i64, ptr %"s#local#sym22#1", align 4
  ret i64 %"s#local#sym22#1.field#idx0#sym21#2"
}

attributes #0 = { nounwind }
