llvm/src/snapshots/transmute_llvm__tests__struct_read_field_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64 }

@layout_struct_Struct = global [1 x i64] zeroinitializer

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1Pn(i64)

declare void @_TM0_5print1Pb(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f0P() gc "shadow-stack" {
entry:
  %"s#local#sym22#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym22#", align 8
  call void @llvm.gcroot(ptr %"s#local#sym22#", ptr @layout_struct_Struct)
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64))
  %"heap#struct#Struct#id0#.field#idx0#sym21" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 0
  store i64 1, ptr %"heap#struct#Struct#id0#.field#idx0#sym21", align 4
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym22#", align 8
  call void @gc_run()
  %"s#local#sym22#1" = load ptr, ptr %"s#local#sym22#", align 8
  %"s#local#sym22#1.field#idx0#sym21#" = getelementptr inbounds %"Struct#id0", ptr %"s#local#sym22#1", i32 0, i32 0
  %"s#local#sym22#1.field#idx0#sym21#2" = load i64, ptr %"s#local#sym22#1.field#idx0#sym21#", align 4
  ret i64 %"s#local#sym22#1.field#idx0#sym21#2"
}

attributes #0 = { nounwind }
