llvm/src/snapshots/transmute_llvm__tests__struct_var_as_parameter_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64 }

@layout_s6Struct = global [1 x i64] zeroinitializer

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1s6Struct(ptr %"s#param#sym23#") gc "shadow-stack" {
entry:
  %"s#param#sym23#.field#idx0#sym22#" = getelementptr inbounds %"Struct#id0", ptr %"s#param#sym23#", i32 0, i32 0
  %"s#param#sym23#.field#idx0#sym22#1" = load i64, ptr %"s#param#sym23#.field#idx0#sym22#", align 4
  ret i64 %"s#param#sym23#.field#idx0#sym22#1"
}

define i64 @_TM0_1g0() gc "shadow-stack" {
entry:
  %"s#local#sym24#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym24#", align 8
  call void @llvm.gcroot(ptr %"s#local#sym24#", ptr @layout_s6Struct)
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64))
  %"heap#struct#Struct#id0#.field#idx0#sym22" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 0
  store i64 1, ptr %"heap#struct#Struct#id0#.field#idx0#sym22", align 4
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym24#", align 8
  call void @gc_run()
  %"s#local#sym24#1" = load ptr, ptr %"s#local#sym24#", align 8
  %"f#res#" = call i64 @_TM0_1f1s6Struct(ptr %"s#local#sym24#1")
  ret i64 %"f#res#"
}

attributes #0 = { nounwind }
